crates/stilyagi-extract/tests/extract/snapshots/extract_integration__ir_identity__extraction_tests__malformed_rust_fixture_has_a_golden_ir_snapshot.snap
---
source: crates/stilyagi-extract/tests/extract/ir_identity.rs
expression: "document.to_canonical_json().unwrap_or_else(|error|\npanic!(\"expected canonical Rust IR JSON: {error}\"))"
---
{
  "schema_version": "1.0.0",
  "document": {
    "uri": null,
    "path": "tests/fixtures/corpus/rust/malformed/unclosed-item.rs",
    "syntax": "rust",
    "natural_language": null,
    "encoding": "utf-8",
    "content_hash": "sha256:4b96b446078438a7c4c79b98d4dff3bb91b57a29ebae1b67441b87eb894dd304"
  },
  "producers": [
    {
      "kind": "tree-sitter",
      "name": "tree-sitter-rust",
      "version": "0.24.2",
      "options": {
        "doc_comment_content": "verbatim",
        "node_store": "bounded",
        "owner_qualname": "rust"
      }
    }
  ],
  "line_index": [
    0,
    60,
    61,
    123,
    150,
    188,
    189
  ],
  "trees": [
    {
      "id": "t0",
      "family": "tree-sitter",
      "syntax": "rust",
      "root": "n0"
    }
  ],
  "nodes": [
    {
      "id": "n0",
      "tree": "t0",
      "kind": "module",
      "parent": null,
      "children": [
        "n1"
      ],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 0,
        "byte_end": 189
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n1",
      "tree": "t0",
      "kind": "line_comment",
      "parent": "n0",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 0,
        "byte_end": 60
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    }
  ],
  "regions": [
    {
      "id": "r0",
      "kind": "rust_doc_comment",
      "scope": [
        "rust",
        "doc_comment",
        "module"
      ],
      "syntax": "rust",
      "natural_language": null,
      "text": " Crate-level documentation before malformed Rust source.",
      "segments": [
        {
          "text_start": 0,
          "text_end": 56,
          "source": {
            "byte_start": 3,
            "byte_end": 59
          },
          "synthetic": null,
          "node": "n1",
          "text": " Crate-level documentation before malformed Rust source."
        }
      ],
      "origin_nodes": [
        "n1"
      ],
      "owner": {
        "kind": "module",
        "name": null,
        "qualname": null
      },
      "attrs": {},
      "parent_region": null
    }
  ],
  "suppressions": [],
  "errors": [
    {
      "code": "rust-doc-comment-error-subtree",
      "message": "dropped Rust doc comment(s) absorbed into a tree-sitter ERROR subtree",
      "span": {
        "byte_start": 0,
        "byte_end": 189
      }
    },
    {
      "code": "rust-parse-recovery",
      "message": "recovered ERROR node at bytes 0..189",
      "span": {
        "byte_start": 0,
        "byte_end": 189
      }
    }
  ],
  "metadata": {}
}
