crates/stilyagi-extract/tests/extract/snapshots/extract_integration__ir_identity__extraction_tests__shared_python_fixture_has_a_golden_ir_snapshot.snap
---
source: crates/stilyagi-extract/tests/extract/ir_identity.rs
assertion_line: 63
expression: "document.to_canonical_json().unwrap_or_else(|error|\npanic!(\"expected canonical Python IR JSON: {error}\"))"
---
{
  "schema_version": "1.1.0",
  "document": {
    "uri": null,
    "path": "tests/fixtures/corpus/python/valid/module-class-function-docstrings.py",
    "syntax": "python",
    "natural_language": null,
    "encoding": "utf-8",
    "content_hash": "sha256:b3f8ce4872bc3dbbb78b21c404f43f1cd45afda2da7667d1cb48b55f315c0154"
  },
  "producers": [
    {
      "kind": "tree-sitter",
      "name": "tree-sitter-python",
      "version": "0.25.0",
      "options": {
        "docstring_content": "verbatim",
        "node_store": "bounded",
        "owner_qualname": "python"
      }
    }
  ],
  "line_index": [
    0,
    55,
    56,
    57,
    93,
    115,
    174,
    175,
    193,
    218,
    283,
    311,
    312,
    313,
    345,
    377,
    448,
    449,
    450,
    481,
    505,
    525
  ],
  "trees": [
    {
      "id": "t0",
      "family": "tree-sitter",
      "syntax": "python",
      "root": "n0"
    }
  ],
  "nodes": [
    {
      "id": "n0",
      "tree": "t0",
      "kind": "module",
      "parent": null,
      "children": [
        "n1",
        "n2",
        "n6",
        "n8",
        "n9",
        "n10",
        "n11",
        "n12"
      ],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 0,
        "byte_end": 525
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n1",
      "tree": "t0",
      "kind": "string",
      "parent": "n0",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 0,
        "byte_end": 54
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n2",
      "tree": "t0",
      "kind": "class_definition",
      "parent": "n0",
      "children": [
        "n3",
        "n4"
      ],
      "fields": {
        "name": "FixtureExample"
      },
      "props": {},
      "span": {
        "byte_start": 93,
        "byte_end": 310
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n3",
      "tree": "t0",
      "kind": "string",
      "parent": "n2",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 119,
        "byte_end": 173
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n4",
      "tree": "t0",
      "kind": "function_definition",
      "parent": "n2",
      "children": [
        "n5"
      ],
      "fields": {
        "name": "method"
      },
      "props": {},
      "span": {
        "byte_start": 197,
        "byte_end": 310
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n5",
      "tree": "t0",
      "kind": "string",
      "parent": "n4",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 226,
        "byte_end": 282
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n6",
      "tree": "t0",
      "kind": "function_definition",
      "parent": "n0",
      "children": [
        "n7"
      ],
      "fields": {
        "name": "fixture_function"
      },
      "props": {},
      "span": {
        "byte_start": 345,
        "byte_end": 447
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n7",
      "tree": "t0",
      "kind": "string",
      "parent": "n6",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 381,
        "byte_end": 447
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n8",
      "tree": "t0",
      "kind": "comment",
      "parent": "n0",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 57,
        "byte_end": 92
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n9",
      "tree": "t0",
      "kind": "comment",
      "parent": "n0",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 313,
        "byte_end": 344
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n10",
      "tree": "t0",
      "kind": "comment",
      "parent": "n0",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 450,
        "byte_end": 480
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n11",
      "tree": "t0",
      "kind": "comment",
      "parent": "n0",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 481,
        "byte_end": 504
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n12",
      "tree": "t0",
      "kind": "comment",
      "parent": "n0",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 505,
        "byte_end": 524
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    }
  ],
  "regions": [
    {
      "id": "r0",
      "kind": "python_docstring",
      "scope": [
        "python",
        "docstring",
        "module"
      ],
      "syntax": "python",
      "natural_language": null,
      "text": "Module docstring for the shared Stilyagi corpus.",
      "segments": [
        {
          "text_start": 0,
          "text_end": 48,
          "source": {
            "byte_start": 3,
            "byte_end": 51
          },
          "synthetic": null,
          "node": "n1",
          "text": "Module docstring for the shared Stilyagi corpus."
        }
      ],
      "origin_nodes": [
        "n1"
      ],
      "owner": {
        "kind": "module",
        "name": null,
        "qualname": null
      },
      "attrs": {},
      "parent_region": null
    },
    {
      "id": "r1",
      "kind": "python_docstring",
      "scope": [
        "python",
        "docstring",
        "class"
      ],
      "syntax": "python",
      "natural_language": null,
      "text": "Class docstring with prose for extraction tests.",
      "segments": [
        {
          "text_start": 0,
          "text_end": 48,
          "source": {
            "byte_start": 122,
            "byte_end": 170
          },
          "synthetic": null,
          "node": "n3",
          "text": "Class docstring with prose for extraction tests."
        }
      ],
      "origin_nodes": [
        "n3"
      ],
      "owner": {
        "kind": "class",
        "name": "FixtureExample",
        "qualname": "FixtureExample"
      },
      "attrs": {},
      "parent_region": null
    },
    {
      "id": "r2",
      "kind": "python_docstring",
      "scope": [
        "python",
        "docstring",
        "function"
      ],
      "syntax": "python",
      "natural_language": null,
      "text": "Return a documented value from a method docstring.",
      "segments": [
        {
          "text_start": 0,
          "text_end": 50,
          "source": {
            "byte_start": 229,
            "byte_end": 279
          },
          "synthetic": null,
          "node": "n5",
          "text": "Return a documented value from a method docstring."
        }
      ],
      "origin_nodes": [
        "n5"
      ],
      "owner": {
        "kind": "function",
        "name": "method",
        "qualname": "FixtureExample.method"
      },
      "attrs": {},
      "parent_region": null
    },
    {
      "id": "r3",
      "kind": "python_docstring",
      "scope": [
        "python",
        "docstring",
        "function"
      ],
      "syntax": "python",
      "natural_language": null,
      "text": "Use a function docstring for later Python extraction slices.",
      "segments": [
        {
          "text_start": 0,
          "text_end": 60,
          "source": {
            "byte_start": 384,
            "byte_end": 444
          },
          "synthetic": null,
          "node": "n7",
          "text": "Use a function docstring for later Python extraction slices."
        }
      ],
      "origin_nodes": [
        "n7"
      ],
      "owner": {
        "kind": "function",
        "name": "fixture_function",
        "qualname": "fixture_function"
      },
      "attrs": {},
      "parent_region": null
    }
  ],
  "suppressions": [
    {
      "id": "s0",
      "kind": "inline",
      "codes": [
        "terminology"
      ],
      "span": {
        "byte_start": 57,
        "byte_end": 92
      },
      "origin": "n8"
    },
    {
      "id": "s1",
      "kind": "range",
      "range_role": "open",
      "codes": [
        "terminology"
      ],
      "span": {
        "byte_start": 313,
        "byte_end": 344
      },
      "origin": "n9"
    },
    {
      "id": "s2",
      "kind": "range",
      "range_role": "close",
      "codes": [
        "terminology"
      ],
      "span": {
        "byte_start": 450,
        "byte_end": 480
      },
      "origin": "n10"
    },
    {
      "id": "s3",
      "kind": "file",
      "codes": [],
      "span": {
        "byte_start": 481,
        "byte_end": 504
      },
      "origin": "n11"
    }
  ],
  "errors": [
    {
      "code": "suppression-blanket-forbidden",
      "message": "blanket suppression directives must name at least one code",
      "span": {
        "byte_start": 505,
        "byte_end": 524
      }
    }
  ],
  "metadata": {}
}
